--- a/etch.css
+++ b/etch.css
@@ -8,7 +8,16 @@ body {
 }
 
 #container {
-    width: 500px;
-    height: 500px;
+    width: 350px;
+    height: 350px;
     border: 3px solid black;
+    margin-top: 20px;
+}
+
+#btn {
+    margin: auto 15px;
+}
+
+h3 {
+    margin-top: -30px;
 }
