--- a/etch.css
+++ b/etch.css
@@ -12,12 +12,19 @@ body {
     height: 350px;
     border: 3px solid black;
     margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 #btn {
     margin: auto 15px;
+    /* color: rgb(233, 233, 233); */
 }
 
 h3 {
     margin-top: -30px;
+}
+
+#clear {
+    margin-top: 20px;
 }
