--- a/etch.css
+++ b/etch.css
@@ -18,13 +18,17 @@ body {
 
 #btn {
     margin: auto 15px;
-    /* color: rgb(233, 233, 233); */
 }
 
 h3 {
     margin-top: -30px;
 }
 
-#clear {
-    margin-top: 20px;
+#buttons {
+    width: 356px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 15px;
 }
